0.07  Mon, 19 Jul 2010 05:56:05 +0200
  * Avoid warnings from Moose 1.09 (Dave Rolsky).

0.06  Fri, 07 May 2010 19:00:11 +0200
  * Improve distribution metadata.
  * Disable workaround for Moose < 0.94 and bump the dependency version.

0.05  Sat, 18 Jan 2010 18:15:00 +0000
  * Work around changes in composition_class_role in Moose >= 0.93_01
    to be compatible with both old and new Moose versions.

0.04  Mon, 04 Jan 2010 18:40:11 +0100
  * Depend on Test::More 0.88 for done_testing.

0.03  Fri, 20 Nov 2009 07:57:25 +0100
  * Make ToInstance application work on perl older than 5.8.9.

0.02  Sun Oct 11 08:37:43 CEST 2009
  * Fix missing dependency on MooseX::Types (Closes: RT#50386).

0.01  Wed, 07 Oct 2009 00:22:14 +0200
  * Initial release.